# portfolio

./: .gitignore  README.md  astro.config.ts  package-lock.json  package.json
.claude/commands/: rules.md
public/: site.webmanifest
scripts/: copy-audio.js
src/: consts.ts  content.config.ts
src/components/: AudioPlayer.astro  Badge.astro  BeatmapsetFavouriteButton.astro  BlogCard.astro  BlogGridCard.astro  Callout.astro  CodeBlock.astro  CodeFile.astro  DescriptionWithTooltip.astro  DescriptionWithTooltip.tsx  Favicons.astro  Footer.astro  Header.astro  PostHead.astro  ProjectCard.astro  TOCSidebar.astro  Table.astro  WidgetCard.astro
src/components/ui/: dialog.tsx  tooltip.tsx
src/content/blog/: alpha.md  beta.md  delta.md  epsilon.md  eta.md  gamma.md  iota.md  kappa.md  lambda.md  mu.md  theta.md  welcome.md  zeta.md
src/content/blog/beta/socal2025/: A.cpp  B.cpp  B.in  C.cpp  C1.in  C2.in  C3.in  CMakeLists.txt  D.cpp  D1.in  E.cpp  E1.in  E2.in  F.cpp  F1.in  F2.in  G.cpp  H.cpp  H1.in  H2.in  H3.in  H4.in  I.cpp  I1.in  J.cpp  J1.in  K.cpp  K1.in  K2.in  L.cpp  L1.in  L2.in  M.cpp  Makefile  a.out  main.cpp  output.txt
src/content/projects/: cp-dashboard.md  cp-solutions.md  formosa-dental.md  foxconn.md  lunabill.md  old-blog.md  systex.md  tsukiyomi.md
src/layouts/: Layout.astro
src/lib/: data-utils.ts  graph-data.ts
src/pages/: about.astro  index.astro  playground.astro  projects.astro  work.astro
src/pages/authors/: [author].astro
src/references/: beatmapset-badge.tsx  beatmapset-cover.tsx
src/styles/: design-tokens.css  global.css
(+21 files in other folders)
